# nam.cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: inference.cpp  inference.h  main.cpp  model.cpp  model.h  wav.cpp  wav.h
